feat: Adicionar método para retornar a finalidade dos encantamentos e categorizar itens